<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:text = "@string/defaultValue"
    android:textColor="@color/black"
    android:textSize="48sp"
    android:padding="10dp"
    android:gravity="right|bottom"
    android:background="#efefef"/>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/seven"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text="@string/eight"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text="@string/nine"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
        <Button
            android:text="@string/divide"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text= "@string/four"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text= "@string/five"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text="@string/six"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
        <Button
            android:text="@string/multiply"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text= "@string/one"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text= "@string/two"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <Button
            android:text="@string/three"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
        <Button
            android:text="@string/point"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text= "@string/zero"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_width="0dp"
            android:layout_weight="2"
            />

        <Button
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>
        <Button
            android:text="@string/plus"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text= "@string/equal"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

    </LinearLayout>
</LinearLayout>